tests/v05-vertical-slice/accept/print_f64.hew
fn main() -> i64 {
    let value: f64 = 1.5;
    print(value);
    println("");
    0
}
