tests/v05-vertical-slice/reject/unresolved_inference.hew
fn main() {
  let x: _ = 1;
}
